--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./css/style.css">
+        <title>Pushing P</title>
     </head>
     <body>
         <div id="root"></div>
